--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
     
-    <h1>This is going to look legit amazing!</h1>
-    <div id="text_input_container"></div>
+<!--    <h1>This is going to look legit amazing!</h1>-->
+<!--    <div id="text_input_container"></div>-->
+    <div id="App"></div>
 
     <!-- Load React. -->
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
@@ -17,7 +18,9 @@
 
 
     <!-- Load our React component. -->
-    <script src="components/text_input/text_input_container.js" type="text/babel"></script>
+<!--    <script src="components/text_input.js" type="text/babel"></script>-->
+    
+    <script src="App.js" type="text/babel"></script>
     <footer>
     </footer>
 </body>
